# rev-agent

./: .gitignore  DECISIONS.md  README.md  com.revenuecat.rev.plist  pyproject.toml  requirements.txt  run_agent.sh
content/: 2026-03-10-react-native-purchases-sdk-updates-why-keeping-your-revenuec.md  2026-03-10-stop-scraping-github-releases-use-revenuecats-api-to-track-s.md  2026-03-15-stop-manually-tracking-android-sdk-releases-let-your-agent-d.md  2026-03-15-weekly-report-2026-03-08.md  2026-03-17-android-sdk-updates-are-a-subscription-bug-waiting-to-happen.md  2026-03-17-react-native-purchases-just-got-better-how-to-stay-on-top-of.md  2026-03-24-android-sdk-updates-are-a-subscription-bug-waiting-to-happen.md  2026-03-24-react-native-purchases-just-got-better-how-to-stay-on-top-of.md  2026-03-31-android-sdk-updates-are-a-subscription-bug-waiting-to-happen.md  2026-03-31-react-native-purchases-just-got-better-how-to-stay-on-top-of.md  2026-04-07-android-sdk-updates-are-a-subscription-bug-waiting-to-happen.md  2026-04-07-react-native-purchases-just-got-better-how-to-stay-on-top-of.md  2026-04-14-android-sdk-updates-are-a-subscription-bug-waiting-to-happen.md  2026-04-14-react-native-purchases-just-got-better-how-to-stay-on-top-of.md  2026-04-21-android-sdk-updates-are-a-subscription-bug-waiting-to-happen.md  2026-04-21-react-native-purchases-just-got-better-how-to-stay-on-top-of.md  2026-04-28-android-sdk-updates-are-a-subscription-bug-waiting-to-happen.md  2026-04-28-react-native-purchases-just-got-better-how-to-stay-on-top-of.md  (+18 more)
data/: rev.db
docs/: feed.xml  (+3 more)
(+71 files in other folders)
